--- a/Keerthi.html
+++ b/Keerthi.html
@@ -124,9 +124,9 @@
             <h3>Graduate Research Assistant - University of Oklahoma | (05/2023 - Current)</h3>
             </div>
             <ul>
-                <li>Implemented diverse machine learning models, such as RNNs, SVMs, and deep learning architectures, to enhance EEG data classification.</li>
-                <li>Developed a novel RNN-based model, achieving a 15% improvement in accuracy for seizure prediction in EEG data.</li>
-                <li>Engineered and deployed an SVM classifier for EEG signal categorization, reducing false positives by 20%.</li>
+                <li>Designed and implemented a mixed-methodology framework combining quantitative and qualitative data analysis to measure visitor emotional engagement, utilizing bio sensory technology and survey data for predictive modeling and hypothesis testing.</li>
+                <li>Processed and analyzed large-scale datasets of bio sensory and subjective survey responses to uncover insights into emotional and cognitive impacts of museum geographies, applying statistical methods, machine learning models, and data visualization techniques.</li>
+                <li>Developed data pipelines to integrate and transform biometric, geospatial, and survey datasets, ensuring data quality and consistency for research reproducibility, while collaborating with interdisciplinary teams to provide actionable insights on heritage environments.</li>
                 <li>Achieved a 91% accuracy rate in EEG data classification, demonstrating expertise in advanced machine learning techniques.</li>
             </ul>
             </div>
